Run `cargo shear --fix`

--- a/crates/tombi-lsp/Cargo.toml
+++ b/crates/tombi-lsp/Cargo.toml
@@ -10,23 +10,18 @@ ahash.workspace = true
 chrono.workspace = true
 clap = { workspace = true, optional = true }
 futures.workspace = true
-futures-util.workspace = true
 indexmap.workspace = true
 itertools.workspace = true
 regex.workspace = true
 reqwest.workspace = true
-rustc-hash.workspace = true
 semver.workspace = true
 serde.workspace = true
-serde_json.workspace = true
 serde_tombi.workspace = true
-thiserror.workspace = true
 tokio.workspace = true
 tombi-ast.workspace = true
 tombi-config.workspace = true
 tombi-date-time.workspace = true
 tombi-diagnostic.workspace = true
-tombi-document.workspace = true
 tombi-document-tree.workspace = true
 tombi-extension.workspace = true
 tombi-extension-cargo.workspace = true
@@ -43,7 +38,7 @@ tombi-validator.workspace = true
 tombi-x-keyword.workspace = true
 tower-lsp.workspace = true
 tracing.workspace = true
-tracing-subscriber.workspace = true
+
 
 [dev-dependencies]
 pretty_assertions.workspace = true
@@ -56,3 +51,6 @@ tombi-test-lib.workspace = true
 [features]
 clap = ["dep:clap"]
 default = ["clap"]
+
+[package.metadata.cargo-shear]
+ignored = ["semver"]
