--- a/crates/tombi-text/Cargo.toml
+++ b/crates/tombi-text/Cargo.toml
@@ -6,7 +6,6 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
-serde = { workspace = true, optional = true }
 tower-lsp = { workspace = true, optional = true }
 tracing.workspace = true
 
@@ -15,6 +14,6 @@ pretty_assertions.workspace = true
 rstest.workspace = true
 
 [features]
-default = ["lsp", "serde"]
+default = ["lsp"]
 lsp = ["dep:tower-lsp"]
-serde = ["dep:serde"]
+serde = []
