--- a/crates/tombi-x-keyword/Cargo.toml
+++ b/crates/tombi-x-keyword/Cargo.toml
@@ -7,12 +7,11 @@ repository.workspace = true
 license.workspace = true
 
 [dependencies]
-clap = { workspace = true, optional = true }
 schemars = { workspace = true, optional = true }
 serde = { workspace = true, optional = true }
 
 [features]
-clap = ["dep:clap"]
-default = ["clap", "serde"]
+clap = []
+default = [ "serde"]
 jsonschema = ["dep:schemars"]
 serde = ["dep:serde"]
