--- a/rust/serde_tombi/Cargo.toml
+++ b/rust/serde_tombi/Cargo.toml
@@ -9,7 +9,6 @@ license.workspace = true
 
 [dependencies]
 chrono.workspace = true
-futures.workspace = true
 indexmap.workspace = true
 itertools.workspace = true
 serde.workspace = true
@@ -19,13 +18,11 @@ tokio.workspace = true
 tombi-ast.workspace = true
 tombi-config.workspace = true
 tombi-date-time.workspace = true
-tombi-diagnostic.workspace = true
 tombi-document.workspace = true
 tombi-document-tree.workspace = true
 tombi-formatter.workspace = true
 tombi-parser.workspace = true
 tombi-schema-store.workspace = true
-tombi-text.workspace = true
 tombi-toml-text.workspace = true
 tombi-toml-version.workspace = true
 tombi-url.workspace = true
@@ -34,7 +31,9 @@ typed-builder.workspace = true
 url.workspace = true
 
 [dev-dependencies]
-maplit.workspace = true
 pretty_assertions.workspace = true
 tokio = { workspace = true, features = ["macros"] }
 tombi-test-lib.workspace = true
+
+[package.metadata.cargo-shear]
+ignored = ["textwrap"] # Used in `toml_text_assert_eq` macro
